[package]
name = "docker_gamma_auth"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9"
jsonwebtoken = "7.2"
log = "0.4.14"
rand = "0.8"
rsa = "0.5.0"
pkcs8 = { version = "0.7.5", features = ["pkcs1"] }
sha2 = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tide = "0.16.0"
data-encoding = "2"
surf = { version = "2.2", default_features = false, features = [
    "h1-client-rustls",
    "middleware-logger",
] }
anyhow = "1"
thiserror = "1"
surf-cookie-middleware = "0.2.0"
mobc = { version = "0.7", features = ["async-std"] }
mobc-redis = { version = "0.7", default-features = false, features = [
    "async-std-comp",
] }
http-types = "2"
